--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
   background-size: cover;
 }
 
-form{
+.form1{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -15,7 +15,7 @@ form{
 
 .center {
   background-color: white;
-  width: 400px;
+  width: 500px;
   margin: 150px auto;
   padding: 10px 30px;
   border-radius: 20px;
@@ -31,7 +31,7 @@ label{
 }
 
 input[type="number"]{
-  width: 250px;
+  width: 350px;
   height: 40px;
   margin-bottom: 20px;
   box-sizing: border-box;
@@ -39,6 +39,7 @@ input[type="number"]{
   -webkit-transition: 0.5s;
   transition: 0.5s;
   outline: none;
+  font-size: large;
 }
 
 input[type=number]:focus {
@@ -57,4 +58,41 @@ button {
 button:hover {
   background-color: #555555;
   color: white;
+}
+
+
+
+#imt {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#imt td, #imt th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#imt tr:nth-child(even){background-color: #f2f2f2;}
+
+#imt tr:hover {background-color: #ddd;}
+
+#imt th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #555555;
+  color: white;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
